# gm2fieldsignal

./: CMakeLists.txt  Makefile
Barcode/: Makefile
Barcode/include/: gm2BarcodeAnalyzer.h
Barcode/src/: gm2BarcodeAnalyzer.cxx
Dsp/: Makefile
Dsp/include/: dsp.h  dsp_gpu.h
Dsp/lib/: libdsp.so.0.0.0
Dsp/src/: dsp_common.cxx  dsp_cpu.cxx  dsp_gpu.cu
Fid/: Makefile
Fid/include/: fid.h  fidfactory.h  userfid.h
Fid/src/: .#fid.cxx  1  fid.cxx  fidfactory.cxx  userfid.cxx
Test/: Makefile
Test/data/: fps_run_00825_probe_100_evt_664.fid  fps_run_01041_probe_110_evt_001.fid
Test/src/: TestFid.cxx  TestFidfactory.cxx  TestFidfactory_10_31.cxx  TestFidfactory_10_31_2.cxx  TestFpsFid.cxx
scripts/: fieldsignalrc
ups/: product_deps
